[project]
name = "hephaestus"
version = "0.1.0"
description = "Generate Bruno API collections from OpenAPI specifications."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Maksim Fisenko", email = "fisenkomaksim.id@gmail.com" },
]

dependencies = [
  "typer>=0.26.7",
]

[project.urls]
Homepage = "https://github.com/maksimfisenko/hephaestus"
Issues = "https://github.com/maksimfisenko/hephaestus/issues"
Repository = "https://github.com/maksimfisenko/hephaestus"

[project.scripts]
hephaestus = "hephaestus.cli:app"

[dependency-groups]
dev = [
  "ruff>=0.15.16",
  "tombi>=1.1.1",
  "ty>=0.0.44",
]

[build-system]
requires = ["hatchling >= 1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hephaestus"]

[tool.ruff]
indent-width = 4
line-length = 100
show-fixes = true
src = ["src"]
target-version = "py314"
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # conflicts with formatter
]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 0
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.analyze]
type-checking-imports = false

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
nested-string-quote-style = "alternating"
quote-style = "double"
skip-magic-trailing-comma = false
preview = true

[tool.ty.environment]
python-platform = "linux"
python-version = "3.14"
root = ["./src"]
